Replace `govuk-tag--inactive` with `govuk-tag--grey` in tests
Class `govuk-tag--inactive` was replaced by `govuk-tag--grey` and
deprecated in PR #1711. This commit replaces references to it in our
tests, examples, and fixtures.

--- a/src/govuk/components/tag/tag.yaml
+++ b/src/govuk/components/tag/tag.yaml
@@ -23,7 +23,7 @@ examples:
 - name: inactive
   data:
     text: alpha
-    classes: govuk-tag--inactive
+    classes: govuk-tag--grey
 - name: grey
   data:
     text: Grey
