--- a/src/govuk/components/phase-banner/phase-banner.yaml
+++ b/src/govuk/components/phase-banner/phase-banner.yaml
@@ -60,6 +60,6 @@ examples:
     data:
       text: This is a new service – your feedback will help us to improve it
       tag:
-        classes: govuk-tag--inactive
+        classes: govuk-tag--grey
         text: alpha
 
