--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "nodemon": "^2.0.4",
     "oldie": "^1.3.0",
     "outdent": "^0.7.1",
+    "postcss": "^8.3.11",
     "postcss-pseudo-classes": "0.2.0",
     "postcss-scss": "^2.1.1",
     "puppeteer": "^9.1.1",
