Rename GOV.UK footer example
When the footer example has 'GOV.UK' in the name, it gets
flagged by Chrome as a possible spam/phishing site which
means you can't open that example in a new window.

This commit works around that issue by renaming the example -
it seems to be the word "GOV.UK" which triggers it

--- a/src/govuk/components/footer/footer.yaml
+++ b/src/govuk/components/footer/footer.yaml
@@ -192,7 +192,7 @@ examples:
           - href: '#3'
             text: Navigation item 3
 
-- name: GOV.UK
+- name: Full GDS example
   description: A full example based on GOV.UK's current footer
   data:
     navigation:
