Add workaround for npm@6

--- a/.github/workflows/diff-change-to-dist.yaml
+++ b/.github/workflows/diff-change-to-dist.yaml
@@ -4,6 +4,9 @@ on:
   pull_request:
     paths: ['dist/**']
 
+env:
+  NPM_TOKEN: none  # needed for npm@6
+
 jobs:
   generate-diff:
     name: Generate Diff
