Allow users to `require` GOV.UK Frontend JavaScript
When we introduced ECMAScript modules, we broke the ability to `require` the
JavaScript. By defining an entry point for `require` statements in the package.json
file, we add back that functionality.

https://nodejs.org/api/packages.html#conditional-exports

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "govuk/all.js",
   "module": "govuk-esm/all.mjs",
   "exports": {
-    "import": "./govuk-esm/all.mjs"
+    "import": "./govuk-esm/all.mjs",
+    "require": "./govuk/all.js"
   },
   "sideEffects": [
     "govuk-esm/vendor/**"
