--- a/src/govuk/components/summary-list/summary-list.yaml
+++ b/src/govuk/components/summary-list/summary-list.yaml
@@ -64,6 +64,78 @@ params:
       type: object
       required: false
       description: HTML attributes (for example data attributes) to add to the action item.
+- name: card
+  type: object
+  required: false
+  description: Options for the summary card. If any of these options are present, a summary card will wrap around the summary list.
+  params:
+  - name: title
+    type: object
+    required: false
+    description: Data for the summary card header.
+    params:
+    - name: text
+      type: string
+      required: false
+      description: Text to use within the each title. If `html` is provided, the `text` option will be ignored.
+    - name: html
+      type: string
+      required: false
+      description: Text to use within the each title. If `html` is provided, the `text` option will be ignored.
+    - name: headingLevel
+      type: integer
+      required: false
+      description: Heading level, from `1` to `6`. Default is `2`.
+    - name: classes
+      type: string
+      required: false
+      description: Classes to add to the title wrapper.
+  - name: actions
+    type: object
+    required: false
+    description: Data for the summary card actions
+    params:
+    - name: items
+      type: array
+      required: false
+      description: Array of action item objects.
+      params:
+      - name: href
+        type: string
+        required: true
+        description: The value of the link's `href` attribute for an action item.
+      - name: text
+        type: string
+        required: true
+        description: If `html` is set, this is not required. Text to use within each action item. If `html` is provided, the `text` option will be ignored.
+      - name: html
+        type: string
+        required: true
+        description: If `text` is set, this is not required. HTML to use within the each action item. If `html` is provided, the `text` option will be ignored.
+      - name: visuallyHiddenText
+        type: string
+        required: false
+        description: Actions rely on context from the surrounding content so may require additional accessible text. Text supplied to this option is appended to the end. Use `html` for more complicated scenarios.
+      - name: classes
+        type: string
+        required: false
+        description: Classes to add to the action item.
+      - name: attributes
+        type: object
+        required: false
+        description: HTML attributes (for example data attributes) to add to the action item.
+    - name: classes
+      type: string
+      required: false
+      description: Classes to add to the actions wrapper.
+  - name: classes
+    type: string
+    required: false
+    description: Classes to add to the container.
+  - name: attributes
+    type: object
+    required: false
+    description: HTML attributes (for example data attributes) to add to the container.
 - name: classes
   type: string
   required: false
@@ -638,7 +710,102 @@ examples:
                 text: Stop
               - href: '#'
                 text: Format
-
+  - name: as a summary card with a text header
+    data:
+      card:
+        title:
+          text: Undergraduate teaching assistant
+      rows:
+        - key:
+            text: Name
+          value:
+            text: Firstname Lastname
+        - key:
+            text: Date of birth
+          value:
+            text: 13/08/1980
+  - name: as a summary card with a custom header level
+    data:
+      card:
+        title:
+          text: Undergraduate teaching assistant
+          headingLevel: 3
+      rows:
+        - key:
+            text: Name
+          value:
+            text: Firstname Lastname
+        - key:
+            text: Date of birth
+          value:
+            text: 13/08/1980
+  - name: as a summary card with a html header
+    data:
+      card:
+        title:
+          html: <em>Undergraduate teaching assistant</em>
+      rows:
+        - key:
+            text: Name
+          value:
+            text: Firstname Lastname
+        - key:
+            text: Date of birth
+          value:
+            text: 13/08/1980
+  - name: as a summary card with actions
+    data:
+      card:
+        title:
+          text: Undergraduate teaching assistant
+        actions:
+          items:
+            - text: Delete job history
+              href: '#'
+            - text: Withdraw job history
+              href: '#'
+      rows:
+        - key:
+            text: Name
+          value:
+            text: Firstname Lastname
+        - key:
+            text: Date of birth
+          value:
+            text: 13/08/1980
+  - name: as a summary card with actions plus summary list actions
+    data:
+      card:
+        title:
+          text: Undergraduate teaching assistant
+        actions:
+          items:
+            - text: Delete job history
+              href: '#'
+            - text: Withdraw job history
+              href: '#'
+      rows:
+      - key:
+          text: Name
+        value:
+          text: Firstname Lastname
+        actions:
+          items:
+            - href: '#'
+              text: Edit
+              visuallyHiddenText: name
+            - href: '#'
+              text: Delete
+              visuallyHiddenText: name
+      - key:
+          text: Date of birth
+        value:
+          text: 13/08/1980
+        actions:
+          items:
+            - href: '#'
+              text: Change
+              visuallyHiddenText: date of birth
 # Hidden examples are not shown in the review app, but are used for tests and HTML fixtures
   - name: attributes
     hidden: true
@@ -787,3 +954,52 @@ examples:
           value:
             text: Firstname Lastname
           classes: app-custom-class
+  - name: summary card with custom classes
+    hidden: true
+    data:
+      card:
+        classes: custom-class
+      rows:
+        - key:
+            text: Name
+          value:
+            text: Firstname Lastname
+        - key:
+            text: Date of birth
+          value:
+            text: 13/08/1980
+  - name: summary card with custom attributes
+    hidden: true
+    data:
+      card:
+        attributes:
+          data-attribute-1: value-1
+          data-attribute-2: value-2
+      rows:
+        - key:
+            text: Name
+          value:
+            text: Firstname Lastname
+        - key:
+            text: Date of birth
+          value:
+            text: 13/08/1980
+  - name: summary card with only 1 action
+    hidden: true
+    data:
+      card:
+        title:
+          text: Undergraduate teaching assistant
+        actions:
+          items:
+            - text: My lonely action
+              href: '#'
+      rows:
+        - key:
+            text: Name
+          value:
+            text: Firstname Lastname
+        - key:
+            text: Date of birth
+          value:
+            text: 13/08/1980
