--- a/package/package.json
+++ b/package/package.json
@@ -5,8 +5,11 @@
   "main": "govuk/all.js",
   "module": "govuk-esm/all.mjs",
   "exports": {
-    "import": "./govuk-esm/all.mjs",
-    "require": "./govuk/all.js"
+    ".": {
+      "sass": "./govuk/all.scss",
+      "import": "./govuk-esm/all.mjs",
+      "require": "./govuk/all.js"
+    }
   },
   "sideEffects": [
     "govuk-esm/vendor/**"
