Add 'sass' entry point to package.json
Allows users to import all.scss in their own sass files using:

`@import "govuk-frontend"`

May only be supported by Webpack at the moment
https://webpack.js.org/guides/package-exports/#conditions

--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "main": "govuk/all.js",
   "module": "govuk-esm/all.mjs",
   "exports": {
-    "import": "./govuk-esm/all.mjs",
-    "require": "./govuk/all.js"
+    ".": {
+      "sass": "./govuk/all.scss",
+      "import": "./govuk-esm/all.mjs",
+      "require": "./govuk/all.js"
+    }
   },
   "sideEffects": [
     "govuk-esm/vendor/**"
