Add ./govuk/ entry to package.json to allow direct import
Allows users to directly import certain sass files, e.g:

```
@import "govuk-frontend/govuk/base";
@import "govuk-frontend/govuk/all.scss";
@import "govuk-frontend/govuk/all";
@import "govuk-frontend/govuk/core/all";
@import "govuk-frontend/govuk/objects/all";
```

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
       "sass": "./govuk/all.scss",
       "import": "./govuk-esm/all.mjs",
       "require": "./govuk/all.js"
-    }
+    },
+    "./govuk/": "./govuk/"
   },
   "sideEffects": [
     "govuk-esm/vendor/**"
