--- a/package/package.json
+++ b/package/package.json
@@ -10,7 +10,8 @@
       "import": "./govuk-esm/all.mjs",
       "require": "./govuk/all.js"
     },
-    "./govuk/": "./govuk/"
+    "./govuk/": "./govuk/",
+    "./govuk-esm/": "./govuk-esm/"
   },
   "sideEffects": [
     "govuk-esm/vendor/**"
