Add "./govuk-esm/" to package.json
Similar to adding "./govuk/" to package.json, this lets tools know that these
paths are also available.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
       "import": "./govuk-esm/all.mjs",
       "require": "./govuk/all.js"
     },
-    "./govuk/": "./govuk/"
+    "./govuk/": "./govuk/",
+    "./govuk-esm/": "./govuk-esm/"
   },
   "sideEffects": [
     "govuk-esm/vendor/**"
