Change cookie hide button text examples
Related to https://github.com/alphagov/govuk-design-system/issues/2087

The original hide button text 'Hide this message' was raised in audits
as being unclear to users of assistive tech. This isn't hardcoded into
the component, but we do have examples which we should update with our
new recommended text: Hide cookie message.

--- a/src/govuk/components/cookie-banner/cookie-banner.yaml
+++ b/src/govuk/components/cookie-banner/cookie-banner.yaml
@@ -110,7 +110,7 @@ examples:
         - text: Your cookie preferences have been saved. You have accepted cookies.
           role: alert
           actions:
-            - text: Hide this message
+            - text: Hide cookie message
               type: button
 
   - name: rejected confirmation banner
@@ -119,7 +119,7 @@ examples:
         - text: Your cookie preferences have been saved. You have rejected cookies.
           role: alert
           actions:
-            - text: Hide this message
+            - text: Hide cookie message
               type: button
 
   - name: client-side implementation
@@ -142,13 +142,13 @@ examples:
           role: alert
           hidden: true
           actions:
-            - text: Hide this message
+            - text: Hide cookie message
               type: button
         - text: Your cookie preferences have been saved. You have rejected cookies.
           role: alert
           hidden: true
           actions:
-            - text: Hide this message
+            - text: Hide cookie message
               type: button
 
   - name: with html
@@ -305,10 +305,10 @@ examples:
         - text: Your cookie preferences have been saved. You have accepted cookies.
           role: alert
           actions:
-            - text: Hide this message
+            - text: Hide cookie message
               type: button
         - text: Your cookie preferences have been saved. You have rejected cookies.
           role: alert
           actions:
-            - text: Hide this message
+            - text: Hide cookie message
               type: button
