--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "gulp-filter": "^6.0.0",
     "gulp-if": "^3.0.0",
     "gulp-plumber": "^1.2.1",
-    "gulp-postcss": "^8.0.0",
+    "gulp-postcss": "^9.0.1",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^5.0.0",
     "gulp-task-listing": "^1.1.0",
@@ -69,9 +69,10 @@
     "nodemon": "^2.0.4",
     "oldie": "^1.3.0",
     "outdent": "^0.7.1",
+    "postcss": "^8.4.14",
     "postcss-pseudo-classes": "0.2.0",
+    "postcss-rtlcss": "^3.6.3",
     "postcss-scss": "^4.0.3",
-    "postcss": "^8.4.7",
     "puppeteer": "^9.1.1",
     "recursive-readdir": "^2.2.2",
     "request": "^2.88.2",
