--- a/package.json
+++ b/package.json
@@ -69,12 +69,13 @@
     "nodemon": "^2.0.4",
     "oldie": "^1.3.0",
     "outdent": "^0.7.1",
+    "postcss": "^8.4.7",
     "postcss-pseudo-classes": "0.2.0",
     "postcss-scss": "^4.0.3",
-    "postcss": "^8.4.7",
     "puppeteer": "^9.1.1",
     "recursive-readdir": "^2.2.2",
     "request": "^2.88.2",
+    "rollup-jest": "^3.0.0",
     "sass-color-helpers": "^2.1.1",
     "sassdoc": "^2.7.3",
     "shuffle-seed": "^1.1.6",
